feature/styling-pages

--- a/public/members.html
+++ b/public/members.html
@@ -33,3 +33,32 @@
 </body>
 
 </html>
+
+<!-- payment method -->
+<!-- <div class="card">
+  <div class="front-side">
+      
+      <h1 class="payment">Payment Method</h1>
+      <ul class="card-list">
+          <li class="card-list-item"></li>
+          <li class="card-list-item"></li>
+      </ul>
+      <button class="navigation-button">
+          pay &gt;&gt;
+      </button>
+  </div>
+  <div class="back-side">
+      <button class="navigation-button">pay &gt;&gt;back</button>
+      <h3 class="selectpayment">Select Payment</h3>
+      <ul class="card-list">
+          <li class="card-list-item">Direct Bank Deposit</li>
+          <li class="card-list-item">PayPal</li>
+          <li class="card-list-item">Credit-Card</li>
+          <li class="card-list-item">Cash</li>
+      </ul>
+      <button class="card-button">Pay Securely</button>
+  </div>
+</div>
+</div>
+</section> -->
+<!-- end of service -->
