--- a/public/register.html
+++ b/public/register.html
@@ -47,3 +47,34 @@
 </body>
 
 </html>
+
+
+<!-- <section class="register" id="register">
+  <h1 class="register-heading">Create An Account</h1>
+  <form class="register-form">
+      <div class="input-group">
+          <label>Full Name *</label>
+          <input type="text" class="register-input" placeholder="Enter Your Name">
+      </div>
+      <div class="input-groups">
+      <div class="input-group">
+          <label>Email *</label>
+          <input type="email" class="register-input" placeholder="Enter Your Email">
+      </div>
+      <div class="input-group">
+          <label>Phone *</label>
+          <input type="text" class="register-input" placeholder="Enter Your Phone Number">
+      </div>
+      <div class="input-group">
+          <label>Create Password *</label>
+          <input type="password" class="register-input" placeholder="Enter Your Password">
+      </div>
+      <div class="input-group">
+          <label>Confirm Password *</label>
+          <input type="password" class="register-input" placeholder="Confirm Your Password">
+      </div>
+      <input type="submit" value="Submit" class="form-btn">
+  </div>
+  </form>
+</section> -->
+<!-- end of register -->
