--- a/public/assets/register.html
+++ b/public/assets/register.html
@@ -1,80 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Passport Authentication</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register Form</title>
+  <link rel="stylesheet" href="css/register.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
-    </div>
-  </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
-        <form class="register">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            <span class="sr-only">Error:</span> <span class="msg"></span>
-          </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
-        </form>
-        <br />
-        <p>Or log in <a href="/login">here</a></p>
+      <div class="col-lg-3"></div>
+
+      <div class="col-lg-6">
+        <div id="ui">
+          <h1 class="text-center">Registeration Form</h1>
+          <form class="form-group text-center">
+            <!-- firstname -->
+            <div class="row">
+              <div class="col-lg-6">
+                <label>First Name:</label>
+                <input type="text" name="fname" class="form-control" placeholder="Enter your First name">
+              </div>
+              <br>
+            <!-- lastname -->
+              <div class="row">
+                <div class="col-lg-6">
+                  <label>Last Name:</label>
+                  <input type="text" name="lname" class="form-control" placeholder="Enter your Last name">
+                </div>
+            </div>
+            <br>
+            <!-- email -->
+            <label>E-mail</label>
+            <input type="email" name="email" class="form-control" placeholder="Enter your e-mail address">
+            <br>
+            <!-- password -->
+            <div class="row">
+              <div class="col-lg-6">
+                <label>Password:</label>
+                <input type="text" name="password" class="form-control" placeholder="Enter New password">
+              </div>
+            <br>
+              <div class="row">
+                <div class="col-lg-6">
+                  <label>Re-enter Password:</label>
+                  <input type="text" name="password" class="form-control" placeholder="Re-enter password again">
+                </div>
+            </div>
+            <br>
+            <!-- gender -->
+            <select class="form-control">
+              <option>Choose Gender</option>
+              <option>Male</option>
+              <option>Female</option>
+              <option>Others</option>
+            </select>
+            <br>
+            <input type="submit" name="submit" value="submit" class="btn btn-primary btn-block btn-lg">
+
+          </form>
+        </div>
       </div>
+
+      <div class="col-lg-3"></div>
     </div>
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./assets/js/register.js"></script>
-
 </body>
-
 </html>
-
-
-<!-- <section class="register" id="register">
-  <h1 class="register-heading">Create An Account</h1>
-  <form class="register-form">
-      <div class="input-group">
-          <label>Full Name *</label>
-          <input type="text" class="register-input" placeholder="Enter Your Name">
-      </div>
-      <div class="input-groups">
-      <div class="input-group">
-          <label>Email *</label>
-          <input type="email" class="register-input" placeholder="Enter Your Email">
-      </div>
-      <div class="input-group">
-          <label>Phone *</label>
-          <input type="text" class="register-input" placeholder="Enter Your Phone Number">
-      </div>
-      <div class="input-group">
-          <label>Create Password *</label>
-          <input type="password" class="register-input" placeholder="Enter Your Password">
-      </div>
-      <div class="input-group">
-          <label>Confirm Password *</label>
-          <input type="password" class="register-input" placeholder="Confirm Your Password">
-      </div>
-      <input type="submit" value="Submit" class="form-btn">
-  </div>
-  </form>
-</section> -->
-<!-- end of register -->
