--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Passport Authentication</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Form</title>
+  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <a href="https://icons8.com/icon/43999/email"></a>
+    <a href="https://icons8.com/icon/QJZXJ1nQqvVj/password-window"></a>
 </head>
-
 <body>
-  <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <div class="navbar-header">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 d-none d-md-block image-container">
+        </div>
+
+        <div class="col-lg-6 col-md-6 form-container">
+          <div class="col-lg-8 col-md-12 col-sm-9 col-xs-12 form-box text-center">
+            <div class="heading mb-4">
+              <h4>Login into your account</h4>
+            </div>
+            <form>
+              <div class="form-input">
+                <span><img src="https://img.icons8.com/nolan/50/email.png"/></span>
+                <input type="email" placeholder="Email Address" required>
+              </div>
+              <div class="form-input">
+                <span><img src="https://img.icons8.com/fluent systems filled/48/000000/password-window.png"/></span>
+                <input type="password" placeholder="Password" required>
+              </div>
+              <div class="row mb-3">
+                <div class="col-6 d-flex">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="cb1">
+                    <label class="custom-control-label text-white" for="cb1">Remember Me</label>
+                  </div>
+                </div>
+                <div class="col-6 text-right">
+                  <a href="#" class="forget-link">
+                    Forget Password</a>
+                  </a>
+                </div>
+              </div>
+              <div class="text-left mb-3">
+                <button type="submit" class="btn">Login</button>
+              </div>
+              <div class="text-center mb-2">
+                <div class="mb-3" style="color: #777">or login with</div>
+                <a href="" class="btn btn-social btn-facebook">facebook</a>
+                <a href="" class="btn btn-social btn-google">google</a>
+                <a href="" class="btn btn-social btn-instagram">instagram</a>
+              </div>
+              <div style="color: #777">Don't have an account<a href="register.html" class="btn btn-register"></a>
+              </div>
+
+            </form>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Login Form</h2>
-        <form class="login">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default">Login</button>
-        </form>
-        <br />
-        <p>Or sign up <a href="/">here</a></p>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/login.js"></script>
-
 </body>
-
 </html>
