--- a/public/assets/register.html
+++ b/public/assets/register.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-lg-3"></div>
+      <div class="col-lg-2"></div>
 
       <div class="col-lg-6">
         <div id="ui">
@@ -37,18 +37,22 @@
             </div>
             <br>
             <!-- email -->
+            <div class="row">
+              <div class="col-lg-12">
             <label>E-mail</label>
             <input type="email" name="email" class="form-control" placeholder="Enter your e-mail address">
+          </div>
+        </div>
             <br>
             <!-- password -->
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <label>Password:</label>
                 <input type="text" name="password" class="form-control" placeholder="Enter New password">
               </div>
             <br>
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-12">
                   <label>Re-enter Password:</label>
                   <input type="text" name="password" class="form-control" placeholder="Re-enter password again">
                 </div>
@@ -68,7 +72,6 @@
         </div>
       </div>
 
-      <div class="col-lg-3"></div>
     </div>
   </div>
 </body>
