Added links for server assets

--- a/public/assets/template.html
+++ b/public/assets/template.html
@@ -76,13 +76,13 @@
             
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6 col-lg-5 p-0 float-md-right service-item overflow-hidden">
-                    <a href="booking.html" target="_blank">
+                    <a href="/booking" target="_blank">
                         <img src="img/booking.PNG" alt="booking" class="card-border">
                     </a>
                 </div>
 
                 <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
-                    <a href="payment.html" target="_blank">
+                    <a href="/payment" target="_blank">
                         <img src="img/payment.PNG" alt="payment" class="card-border">
                     </a>
                 </div>
