--- a/public/assets/booking.html
+++ b/public/assets/booking.html
@@ -12,8 +12,29 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 </head>
-<body id="booking">
-  <div class="container">
+<body data-spy="scroll" data-target="#navbarResponsive">
+  <!-- start home section -->
+  <div id="home">
+  <!-- navigation -->
+  <nav class="navbar navbar-info bg-info navbar-expand-md fixed-top">
+      <a href="#home" class="navbar-brand"><img src="https://img.icons8.com/color/48/000000/animal-shelter.png" alt="Logo" title="Logo"/></a>
+      <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarResponsive">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="#navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item"><a href="template.html #home" class="nav-link center">Home</a></li>
+              <li class="nav-item"><a href="template.html #about" class="nav-link center">About</a></li>
+              <li class="nav-item"><a href="template.html #service" class="nav-link center">Services</a></li>
+              <li class="nav-item"><a href="template.html #stories" class="nav-link center">Testimonials</a></li>
+              <li class="nav-item"><a href="login.html" class="nav-link center">Sign In</a></li>
+              <li class="nav-item"><a href="template.html #logout" class="nav-link center">Logout</a></li>
+          </ul>
+      </div>
+  </nav>
+<!-- form -->
+  <div class="container" id="booking">
     <form class="form-group">
       <h1 class="text-center ">Booking Form</h1>
       <div id="form">
@@ -31,7 +52,7 @@
           <option value="">Preffered Person</option>
           <option value="">Male (>18 years-old)</option>
           <option value="">Female (>18 years-old)</option>
-          <option value="">Teenager (13 - 17</option>
+          <option value="">Teenager (13 - 17)</option>
         </select>
       </div>
 
