--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -10,10 +10,30 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-    <a href="https://icons8.com/icon/43999/email"></a>
-    <a href="https://icons8.com/icon/QJZXJ1nQqvVj/password-window"></a>
 </head>
-<body>
+
+  <body data-spy="scroll" data-target="#navbarResponsive">
+    <!-- start home section -->
+    <div id="home">
+    <!-- navigation -->
+    <nav class="navbar navbar-info bg-info navbar-expand-md fixed-top">
+        <a href="#home" class="navbar-brand"><img src="https://img.icons8.com/color/48/000000/animal-shelter.png" alt="Logo" title="Logo"/></a>
+        <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="#navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="template.html #home" class="nav-link center">Home</a></li>
+                <li class="nav-item"><a href="template.html #about" class="nav-link center">About</a></li>
+                <li class="nav-item"><a href="template.html #service" class="nav-link center">Services</a></li>
+                <li class="nav-item"><a href="template.html #stories" class="nav-link center">Testimonials</a></li>
+                <li class="nav-item"><a href="login.html" class="nav-link center">Sign In</a></li>
+                <li class="nav-item"><a href="template.html #logout" class="nav-link center">Logout</a></li>
+            </ul>
+        </div>
+    </nav>
+<!-- form -->
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6 col-md-6 d-none d-md-block image-container">
@@ -26,11 +46,9 @@
             </div>
             <form>
               <div class="form-input">
-                <span><img src="https://img.icons8.com/nolan/50/email.png"/></span>
                 <input type="email" placeholder="Email Address" required>
               </div>
               <div class="form-input">
-                <span><img src="https://img.icons8.com/fluent systems filled/48/000000/password-window.png"/></span>
                 <input type="password" placeholder="Password" required>
               </div>
               <div class="row mb-3">
@@ -55,7 +73,9 @@
                 <a href="" class="btn btn-social btn-google">google</a>
                 <a href="" class="btn btn-social btn-instagram">instagram</a>
               </div>
-              <div style="color: #777">Don't have an account<a href="register.html" class="btn btn-register"></a>
+              <div class="text-center mb-2">
+              <div class="mb-3" style="color: #777">Don't have an account</div>
+              <a href="register.html" class="btn btn-register">Create an account</a>
               </div>
 
             </form>
